--- a/js/views/profile.html
+++ b/js/views/profile.html
@@ -3,21 +3,6 @@
 </div>
 
 
-
-<!-- <div class="btn-group">
-  <a  class="btn"
-      href="#profile/{{user.id}}/edit"><i class="icon-cog"></i> Edit profile</a>
-  <a  class="btn"
-      href="#profile/{{user.id}}/password"><i class="icon-lock"></i> Change password</a>
-</div>
-
-<hr> -->
-
-
-
-
-
-
 <!-- profile -->
 <div class="row-fluid">
   <div class="tabbable tabs-left">
@@ -89,6 +74,81 @@
 
         <hr>
 
+        <form class="form-vertical">
+
+          <div class="control-group">
+            <label class="control-label">Name</label>
+            <div class="controls">
+              <input  type="text" 
+                      class="span4" 
+                      ng-model="resources.name"
+                      value="{{resources.name}}">
+            </div>
+          </div>
+
+          <div class="control-group">
+            <label class="control-label">Email</label>
+            <div class="controls">
+              <input  type="text" 
+                      class="span4" 
+                      ng-model="resources.EmailAddress"
+                      value="{{resources.EmailAddress}}">
+            </div>
+          </div>
+
+          <div class="control-group">
+            <label class="control-label">Phone</label>
+            <div class="controls">
+              <input  type="text" 
+                      class="span3" 
+                      ng-model="resources.PhoneAddress"
+                      value="{{resources.PhoneAddress}}">
+            </div>
+          </div>
+
+          <div class="control-group">
+            <label class="control-label">Address</label>
+            <div class="controls">
+              <input  type="text" 
+                      class="span5" 
+                      ng-model="resources.PostAddress"
+                      value="{{resources.PostAddress}}">
+            </div>
+          </div>
+
+          <div class="control-group">
+            <label class="control-label">Postcode</label>
+            <div class="controls">
+              <input  type="text" 
+                      class="span2" 
+                      ng-model="resources.PostZip"
+                      value="{{resources.PostZip}}">
+            </div>
+          </div>
+
+          <div class="control-group">
+            <label class="control-label">City</label>
+            <div class="controls">
+              <input  type="text" 
+                      class="span3" 
+                      ng-model="resources.PostCity"
+                      value="{{resources.PostCity}}">
+            </div>
+          </div>
+
+          <hr>
+
+          <div class="control-group">
+            <div class="controls">
+              <button   type="submit" 
+                        class="btn btn-success"
+                        ng-click="save(resources)">Save</button>
+            </div>
+          </div>
+
+        </form>
+
+
       </div>
       <!-- end editTab -->
 
@@ -101,6 +161,47 @@
         </div>
 
         <hr>
+
+        <form class="form-vertical">
+
+          <div class="control-group">
+            <label class="control-label">Current password</label>
+            <div class="controls">
+              <input  type="password" 
+                      class="span3" 
+                      ng-model="passwords.current">
+            </div>
+          </div>
+
+          <div class="control-group">
+            <label class="control-label">New passowrd</label>
+            <div class="controls">
+              <input  type="password" 
+                      class="span3" 
+                      ng-model="passwords.new">
+            </div>
+          </div>
+
+          <div class="control-group">
+            <label class="control-label">New password (Repeat)</label>
+            <div class="controls">
+              <input  type="password" 
+                      class="span3" 
+                      ng-model="passwords.new_repeat">
+            </div>
+          </div>
+
+          <hr>
+
+          <div class="control-group">
+            <div class="controls">
+              <button   type="submit" 
+                        class="btn btn-success"
+                        ng-click="save(resources)">Change password</button>
+            </div>
+          </div>
+
+        </form>
 
       </div>
       <!-- end passwordTab -->
