--- a/js/views/login.html
+++ b/js/views/login.html
@@ -63,6 +63,9 @@
 		      ng-model="logindata.remember">Remember me
 		  </label>
 		  <button class="btn btn-large btn-primary" type="submit">Sign in</button>
+
+		  <p><small><a href="">forgot your password?</a></small></p>
+
 		  <span class="version">v2.0.0</span>
 		</form>
 	</div>
