first attempt for forgot password - not fully functional

--- a/js/views/login.html
+++ b/js/views/login.html
@@ -54,7 +54,7 @@
 		    ng-model="logindata.username"
 		    placeholder="Username" 
 		    autofocus>
-		    
+
 		  <input 
 		      class="" 
 		      type="password" 
@@ -93,8 +93,8 @@
 		  <input 
 		    class="" 
 		    type="text" 
-		    ng-model="remember.email"
-		    placeholder="email address">
+		    ng-model="remember.id"
+		    placeholder="username">
 
 		  <button class="btn btn-large btn-primary" type="submit">Reset Password</button>
 
