--- a/js/views/profile.html
+++ b/js/views/profile.html
@@ -86,7 +86,7 @@
           <button class="close" type="button" ng-click="alert.edit=false">×</button>
           {{alert.edit.message}}
         </div>
-        <!-- end edit password -->
+        <!-- end alert edit -->
 
         <!-- edit profile form -->
         <form class="form-vertical">
