--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,19 @@ html,body {
 }
 
 
+#login .alert,
+#forgot .alert {
+  text-align: left;
+  width: 240px;
+  margin-left: 5px;
+}
+
+#login .alert button,
+#forgot .alert button {
+  margin-top: 0;
+}
+
+
 
 
 
