groups controller tidied up a bit

--- a/js/views/groups.html
+++ b/js/views/groups.html
@@ -32,6 +32,17 @@
 
 
 
+<!-- <div class="well">
+  <h3>Heading</h3>
+  <p>Tagline</p>
+  <p>
+    <a class="btn btn-primary btn-large">
+      Learn more
+    </a>
+  </p>
+</div> -->
+
+
 
 
 <!-- Group Add / Edit
