download mobile app button added to login

--- a/js/views/login.html
+++ b/js/views/login.html
@@ -106,7 +106,14 @@
 		</form>
 	</div>
 	<!-- end remember login -->
-
-
-
+	
 </div>
+
+<!-- download mobile app -->
+<div id="download">
+	<button class="btn btn-large btn-success" type="submit">
+		<span class="entypo">&#128241;</span>
+		<span class="msg">Download Mobile App</span>
+	</button>
+</div>
+<!-- end download mobile app -->
