--- a/css/styles.css
+++ b/css/styles.css
@@ -254,6 +254,34 @@ html,body {
 
 
 
+#download {
+  margin: 5px auto;
+  text-align: center;
+}
+
+#download button {
+  /*width: 360px;*/
+  /*padding-top: 15px;
+  padding-bottom: 15px;*/
+}
+
+#download button span.entypo {
+  font-size: 46px;
+  margin-right: 5px;
+  line-height: 40px;
+  /*text-shadow: 1px 1px 0 black;*/
+  /*text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);*/
+  text-shadow: none;
+}
+
+#download button span.msg {
+  font-size: 18px;
+  top: -5px;
+  position: relative;
+}
+
+
+
 
 
 
