--- a/js/views/groups.html
+++ b/js/views/groups.html
@@ -126,19 +126,28 @@
   <ul class="nav nav-tabs" 
       style="width: 170px;
               margin-right: -1px">
+    
+    <!-- search tab link -->
+    <li class="{{(views.search==true) && 'active'}}"
+        ng-show="views.search">
+      <a href="#searchTab" 
+          data-toggle="tab">
+        <i class="icon-search"></i> Search results
+      </a>
+    </li>
+    <!-- end search tab link -->
 
-
-
+    <!-- group tab links -->
     <li ng-repeat="group in data.groups" 
-        class="{{($index == 0) && 'active'}}">
-
+        class="{{($index == 0 && views.search != true) && 'active' }}">
+        <!-- ng-hide="views.search"> -->
       <a href="#grp-{{group.uuid}}" 
           data-toggle="tab"
           ng-click="fixTabHeight(group.uuid)">
         {{group.name}} ({{data.members[group.uuid].length}})
       </a>
     </li>
-
+    <!-- end group tab links -->
 
 
   </ul>
@@ -149,11 +158,79 @@
                 padding: 20px;">
 
 
+    
+
+    <!-- search tab -->
+    <div class="tab-pane {{(views.search==true) && 'active'}}" id="searchTab" ng-show="views.search">
+
+      <div class="tab-header">
+        <h3 class="pull-left">Search results</h3>
+
+        <button type="button" 
+                ng-click="views.search=false" 
+                style="margin-right: 15px"
+                class="btn pull-right">Close</button>
+      </div>
+
+      <hr>
+
+      <p ng-hide="candidates.length > 0">Sorry but we couldn't find what you are looking for.</p>
+
+      <div ng-show="candidates.length > 0">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th>Name</th>
+              <th>Groups</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+
+            <tr ng-repeat="candidate in candidates">
+              <td>{{$index + 1}}</td>
+              <td>{{candidate.name}}</td>
+              <td>{{candidate.groups}}</td>
+              <td>
+              
+                <select style="margin:0" 
+                        ng-model="candidate.group" 
+                        ng-options="group.name for group in groups">
+                  <option value="">-- select a group --</option>
+                </select>
+
+                <button style="margin-left: 5px;" 
+                        ng-click="addMember(candidate)" 
+                        class="btn btn-success btn-small">Add to group</button>
+
+              </td>
+            </tr>
+
+          </tbody>
+        </table>
+
+        <button type="button" 
+                ng-click="addMembers()" 
+                class="btn btn-success btn-small pull-left">Add Selected Members To Groups</button>
+
+        <span class="muted pull-right">
+          <small><i>There are {{candidates.length}} results in your query.</i></small>
+        </span>
+
+      </div>
 
 
+
+    </div>
+    <!-- end search tab -->
+
+
+    <!-- group tabs -->
     <div  ng-repeat="group in data.groups"
-          class="{{($index == 0) && 'tab-pane active' || 'tab-pane'}}"
+          class="tab-pane {{($index == 0 && views.search != true) && 'active'}}"
           id="grp-{{group.uuid}}">
+          <!-- ng-hide="views.search"> -->
 
       <div class="tab-header">
         <h3 class="pull-left">{{group.name}}</h3>
@@ -166,11 +243,6 @@
                   ng-click="deleteGroup(group.uuid)" 
                   class="btn btn-danger"><i class="icon-trash icon-white"></i> Delete Group</button>
         </div>
-
-        <!-- <button type="button" 
-                ng-click="" 
-                style="margin-right: 15px"
-                class="btn btn-success pull-right"><i class="icon-plus icon-white"></i> Add Members</button> -->
       </div>
 
       <hr>
@@ -230,7 +302,7 @@
 
 
     </div>
-
+    <!-- end group tabs -->
 
 
 
@@ -265,7 +337,7 @@
 
 
 <!-- SEARCH RESULTS -->
-<div class="tabbable tabs-left"
+<!-- <div class="tabbable tabs-left"
       ng-show="searchView">
 
   <ul class="nav nav-tabs" 
@@ -352,6 +424,6 @@
 
   </div>
 
-</div>
+</div> -->
 <!-- END SEARCH RESULTS -->
 
