--- a/css/styles.css
+++ b/css/styles.css
@@ -378,6 +378,9 @@ html,body {
   margin-left: 15px;
 }
 
+.page-header form.form-search {
+  display: inline;
+}
 
 
 
@@ -431,6 +434,16 @@ html,body {
   margin-top: 0;
 }
 
+.nav-tabs-list {
+  width: 170px;
+  margin-right: -1px;
+}
+
+#tab-content-fixed {
+  background-color: white; 
+  border: 1px solid #ddd; 
+  padding: 20px;
+}
 
 
 
